--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -56,7 +56,7 @@ input[dir="rtl"] {
 abbr,
 acronym,
 .explain {
-	border-bottom: 1px dotted black;
+	border-bottom: 1px dotted;
 	cursor: help;
 }
 
