--- a/resources/mediawiki.action/mediawiki.action.history.diff.css
+++ b/resources/mediawiki.action/mediawiki.action.history.diff.css
@@ -1,11 +1,6 @@
-/*
-** Diff rendering
-*/
-table.diff,
-td.diff-otitle,
-td.diff-ntitle {
-	background-color: transparent;
-}
+/**
+ * Diff rendering
+ */
 
 td.diff-otitle,
 td.diff-ntitle {
